<?xml version="1.0"?>
<package format="2">
  <name>robot4ws_visual</name>
  <version>1.0.0</version>
  <description>The robot4ws_visual package</description>
  <maintainer email="matteo.caruso@phd.units.it">Matteo Caruso</maintainer>
  <license>GPLv3</license>
  <url type="website">http://wiki.ros.org/robot4ws_teleop</url>

  <author email="matteo.caruso@phd.units.it">Matteo Caruso</author> -->


 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robot4ws_msgs</build_depend>
  <build_depend>rtabmap_ros</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>robot4ws_msgs</build_export_depend>
  <build_export_depend>rtabmap_ros</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robot4ws_msgs</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>



</package>